feat(#5065): enable '#doesNotTouchAtom' test